src/dpmcore/dpm_xl/grammar/generated/dpm_xlParser.py
# Generated from dpm_xlParser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class dpm_xlParser ( Parser ):

    grammarFileName = "dpm_xlParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':='", "'<-'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'with'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'group by'", "<INVALID>", "'over'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'{'", "<INVALID>", "'['", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'", "<INVALID>", "<INVALID>", "<INVALID>", "'null'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'interval'", "'default'", 
                     "'set-number'", "'set-integer'", "'set-string'", "'set-date'", 
                     "'set-boolean'", "'set-item'", "'number'", "'integer'", 
                     "'string'", "<INVALID>", "'boolean'", "'item'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'partition by'", "'order by'", "'data points'", 
                     "'current data point'", "'range'", "'between'", "'preceding'", 
                     "'following'", "'unbounded'", "'asc'", "'desc'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN_LITERAL", "AND", "OR", "XOR", 
                      "NOT", "ASSIGN", "PERSISTENT_ASSIGN", "EQ", "NE", 
                      "LT", "LE", "GT", "GE", "MATCH", "WITH", "PLUS", "MINUS", 
                      "MULT", "DIV", "MAX_AGGR", "MIN_AGGR", "SUM", "COUNT", 
                      "AVG", "MEDIAN", "GROUP_BY", "RANK", "OVER", "ABS", 
                      "ISNULL", "EXP", "LN", "SQRT", "POWER", "LOG", "MAX", 
                      "MIN", "IN", "COMMA", "COLON", "LPAREN", "RPAREN", 
                      "CURLY_BRACKET_LEFT", "CURLY_BRACKET_RIGHT", "SQUARE_BRACKET_LEFT", 
                      "SQUARE_BRACKET_RIGHT", "IF", "ENDIF", "THEN", "ELSE", 
                      "NVL", "FILTER", "WHERE", "GET", "RENAME", "TO", "SUB", 
                      "TIME_SHIFT", "ANNUALISE", "YEAR", "SEMESTER", "QUARTER", 
                      "MONTH", "WEEK", "DAY", "DATE", "SET_OF", "UNION", 
                      "INTERSECT", "SETDIFF", "SYMDIFF", "LEN", "CONCAT", 
                      "SUBSTR", "TIME_PERIOD", "EOL", "INTEGER_LITERAL", 
                      "DECIMAL_LITERAL", "PERCENT_LITERAL", "NULL_LITERAL", 
                      "STRING_LITERAL", "EMPTY_LITERAL", "DATE_LITERAL", 
                      "CODE", "ESCAPED_IDENTIFIER", "WS", "INTERVAL", "DEFAULT", 
                      "SET_NUMBER", "SET_INTEGER", "SET_STRING", "SET_DATE", 
                      "SET_BOOLEAN", "SET_ITEM", "NUMBER", "INTEGER", "STRING", 
                      "PARAM_DATE", "BOOLEAN", "ITEM", "ROW", "ROW_RANGE", 
                      "ROW_ALL", "COL", "COL_RANGE", "COL_ALL", "SHEET", 
                      "SHEET_RANGE", "SHEET_ALL", "TABLE_REFERENCE", "TABLE_GROUP_REFERENCE", 
                      "VAR_REFERENCE", "OPERATION_REFERENCE", "PARAMETER_REFERENCE", 
                      "SELECTION_MODE_WS", "ROW_COMPONENT", "COL_COMPONENT", 
                      "SHEET_COMPONENT", "ITEM_SIGNATURE", "PROPERTY_CODE", 
                      "CLAUSE_WS", "GROUPING_WS", "PARTITION_BY", "ORDER_BY", 
                      "DATA_POINTS", "CURRENT_DATA_POINT", "RANGE", "BETWEEN", 
                      "PRECEDING", "FOLLOWING", "UNBOUNDED", "ASC", "DESC", 
                      "ANALYTIC_WS", "SET_OPERAND_MODE_WS" ]

    RULE_start = 0
    RULE_statements = 1
    RULE_statement = 2
    RULE_persistentExpression = 3
    RULE_expressionWithoutAssignment = 4
    RULE_partialSelection = 5
    RULE_temporaryAssignmentExpression = 6
    RULE_persistentAssignmentExpression = 7
    RULE_assignmentTarget = 8
    RULE_expression = 9
    RULE_setOperand = 10
    RULE_setElements = 11
    RULE_setExpression = 12
    RULE_functions = 13
    RULE_numericOperators = 14
    RULE_comparisonFunctionOperators = 15
    RULE_filterOperators = 16
    RULE_timeOperators = 17
    RULE_conditionalOperators = 18
    RULE_stringOperators = 19
    RULE_aggregateOperators = 20
    RULE_groupingClause = 21
    RULE_analyticClause = 22
    RULE_partitionClause = 23
    RULE_orderClause = 24
    RULE_orderItem = 25
    RULE_windowClause = 26
    RULE_windowBoundary = 27
    RULE_itemSignature = 28
    RULE_itemReference = 29
    RULE_rowElem = 30
    RULE_colElem = 31
    RULE_sheetElem = 32
    RULE_rowHandler = 33
    RULE_colHandler = 34
    RULE_sheetHandler = 35
    RULE_interval = 36
    RULE_default = 37
    RULE_argument = 38
    RULE_select = 39
    RULE_selectOperand = 40
    RULE_varID = 41
    RULE_cellRef = 42
    RULE_varRef = 43
    RULE_operationRef = 44
    RULE_parameterRef = 45
    RULE_parameterType = 46
    RULE_cellAddress = 47
    RULE_tableReference = 48
    RULE_clauseOperators = 49
    RULE_subAssignment = 50
    RULE_renameClause = 51
    RULE_comparisonOperators = 52
    RULE_literal = 53
    RULE_keyNames = 54
    RULE_propertyReference = 55
    RULE_propertyCode = 56
    RULE_temporaryIdentifier = 57

    ruleNames =  [ "start", "statements", "statement", "persistentExpression", 
                   "expressionWithoutAssignment", "partialSelection", "temporaryAssignmentExpression", 
                   "persistentAssignmentExpression", "assignmentTarget", 
                   "expression", "setOperand", "setElements", "setExpression", 
                   "functions", "numericOperators", "comparisonFunctionOperators", 
                   "filterOperators", "timeOperators", "conditionalOperators", 
                   "stringOperators", "aggregateOperators", "groupingClause", 
                   "analyticClause", "partitionClause", "orderClause", "orderItem", 
                   "windowClause", "windowBoundary", "itemSignature", "itemReference", 
                   "rowElem", "colElem", "sheetElem", "rowHandler", "colHandler", 
                   "sheetHandler", "interval", "default", "argument", "select", 
                   "selectOperand", "varID", "cellRef", "varRef", "operationRef", 
                   "parameterRef", "parameterType", "cellAddress", "tableReference", 
                   "clauseOperators", "subAssignment", "renameClause", "comparisonOperators", 
                   "literal", "keyNames", "propertyReference", "propertyCode", 
                   "temporaryIdentifier" ]

    EOF = Token.EOF
    BOOLEAN_LITERAL=1
    AND=2
    OR=3
    XOR=4
    NOT=5
    ASSIGN=6
    PERSISTENT_ASSIGN=7
    EQ=8
    NE=9
    LT=10
    LE=11
    GT=12
    GE=13
    MATCH=14
    WITH=15
    PLUS=16
    MINUS=17
    MULT=18
    DIV=19
    MAX_AGGR=20
    MIN_AGGR=21
    SUM=22
    COUNT=23
    AVG=24
    MEDIAN=25
    GROUP_BY=26
    RANK=27
    OVER=28
    ABS=29
    ISNULL=30
    EXP=31
    LN=32
    SQRT=33
    POWER=34
    LOG=35
    MAX=36
    MIN=37
    IN=38
    COMMA=39
    COLON=40
    LPAREN=41
    RPAREN=42
    CURLY_BRACKET_LEFT=43
    CURLY_BRACKET_RIGHT=44
    SQUARE_BRACKET_LEFT=45
    SQUARE_BRACKET_RIGHT=46
    IF=47
    ENDIF=48
    THEN=49
    ELSE=50
    NVL=51
    FILTER=52
    WHERE=53
    GET=54
    RENAME=55
    TO=56
    SUB=57
    TIME_SHIFT=58
    ANNUALISE=59
    YEAR=60
    SEMESTER=61
    QUARTER=62
    MONTH=63
    WEEK=64
    DAY=65
    DATE=66
    SET_OF=67
    UNION=68
    INTERSECT=69
    SETDIFF=70
    SYMDIFF=71
    LEN=72
    CONCAT=73
    SUBSTR=74
    TIME_PERIOD=75
    EOL=76
    INTEGER_LITERAL=77
    DECIMAL_LITERAL=78
    PERCENT_LITERAL=79
    NULL_LITERAL=80
    STRING_LITERAL=81
    EMPTY_LITERAL=82
    DATE_LITERAL=83
    CODE=84
    ESCAPED_IDENTIFIER=85
    WS=86
    INTERVAL=87
    DEFAULT=88
    SET_NUMBER=89
    SET_INTEGER=90
    SET_STRING=91
    SET_DATE=92
    SET_BOOLEAN=93
    SET_ITEM=94
    NUMBER=95
    INTEGER=96
    STRING=97
    PARAM_DATE=98
    BOOLEAN=99
    ITEM=100
    ROW=101
    ROW_RANGE=102
    ROW_ALL=103
    COL=104
    COL_RANGE=105
    COL_ALL=106
    SHEET=107
    SHEET_RANGE=108
    SHEET_ALL=109
    TABLE_REFERENCE=110
    TABLE_GROUP_REFERENCE=111
    VAR_REFERENCE=112
    OPERATION_REFERENCE=113
    PARAMETER_REFERENCE=114
    SELECTION_MODE_WS=115
    ROW_COMPONENT=116
    COL_COMPONENT=117
    SHEET_COMPONENT=118
    ITEM_SIGNATURE=119
    PROPERTY_CODE=120
    CLAUSE_WS=121
    GROUPING_WS=122
    PARTITION_BY=123
    ORDER_BY=124
    DATA_POINTS=125
    CURRENT_DATA_POINT=126
    RANGE=127
    BETWEEN=128
    PRECEDING=129
    FOLLOWING=130
    UNBOUNDED=131
    ASC=132
    DESC=133
    ANALYTIC_WS=134
    SET_OPERAND_MODE_WS=135

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(dpm_xlParser.StatementContext,0)


        def EOF(self):
            return self.getToken(dpm_xlParser.EOF, 0)

        def EOL(self):
            return self.getToken(dpm_xlParser.EOL, 0)

        def statements(self):
            return self.getTypedRuleContext(dpm_xlParser.StatementsContext,0)


        def getRuleIndex(self):
            return dpm_xlParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = dpm_xlParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.statement()
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 117
                self.match(dpm_xlParser.EOL)
                self.state = 118
                self.statements()
                pass

            elif la_ == 2:
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==dpm_xlParser.EOL:
                    self.state = 119
                    self.match(dpm_xlParser.EOL)


                pass


            self.state = 124
            self.match(dpm_xlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dpm_xlParser.StatementContext)
            else:
                return self.getTypedRuleContext(dpm_xlParser.StatementContext,i)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(dpm_xlParser.EOL)
            else:
                return self.getToken(dpm_xlParser.EOL, i)

        def getRuleIndex(self):
            return dpm_xlParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = dpm_xlParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 126
                self.statement()
                self.state = 127
                self.match(dpm_xlParser.EOL)
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << dpm_xlParser.BOOLEAN_LITERAL) | (1 << dpm_xlParser.NOT) | (1 << dpm_xlParser.MATCH) | (1 << dpm_xlParser.WITH) | (1 << dpm_xlParser.PLUS) | (1 << dpm_xlParser.MINUS) | (1 << dpm_xlParser.MAX_AGGR) | (1 << dpm_xlParser.MIN_AGGR) | (1 << dpm_xlParser.SUM) | (1 << dpm_xlParser.COUNT) | (1 << dpm_xlParser.AVG) | (1 << dpm_xlParser.MEDIAN) | (1 << dpm_xlParser.RANK) | (1 << dpm_xlParser.ABS) | (1 << dpm_xlParser.ISNULL) | (1 << dpm_xlParser.EXP) | (1 << dpm_xlParser.LN) | (1 << dpm_xlParser.SQRT) | (1 << dpm_xlParser.POWER) | (1 << dpm_xlParser.LOG) | (1 << dpm_xlParser.MAX) | (1 << dpm_xlParser.MIN) | (1 << dpm_xlParser.LPAREN) | (1 << dpm_xlParser.CURLY_BRACKET_LEFT) | (1 << dpm_xlParser.SQUARE_BRACKET_LEFT) | (1 << dpm_xlParser.IF) | (1 << dpm_xlParser.NVL) | (1 << dpm_xlParser.FILTER) | (1 << dpm_xlParser.TIME_SHIFT) | (1 << dpm_xlParser.ANNUALISE) | (1 << dpm_xlParser.YEAR) | (1 << dpm_xlParser.SEMESTER) | (1 << dpm_xlParser.QUARTER) | (1 << dpm_xlParser.MONTH))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (dpm_xlParser.WEEK - 64)) | (1 << (dpm_xlParser.DAY - 64)) | (1 << (dpm_xlParser.DATE - 64)) | (1 << (dpm_xlParser.SET_OF - 64)) | (1 << (dpm_xlParser.UNION - 64)) | (1 << (dpm_xlParser.INTERSECT - 64)) | (1 << (dpm_xlParser.SETDIFF - 64)) | (1 << (dpm_xlParser.SYMDIFF - 64)) | (1 << (dpm_xlParser.LEN - 64)) | (1 << (dpm_xlParser.SUBSTR - 64)) | (1 << (dpm_xlParser.INTEGER_LITERAL - 64)) | (1 << (dpm_xlParser.DECIMAL_LITERAL - 64)) | (1 << (dpm_xlParser.PERCENT_LITERAL - 64)) | (1 << (dpm_xlParser.STRING_LITERAL - 64)) | (1 << (dpm_xlParser.EMPTY_LITERAL - 64)) | (1 << (dpm_xlParser.DATE_LITERAL - 64)) | (1 << (dpm_xlParser.CODE - 64)) | (1 << (dpm_xlParser.ESCAPED_IDENTIFIER - 64)) | (1 << (dpm_xlParser.ROW_COMPONENT - 64)) | (1 << (dpm_xlParser.COL_COMPONENT - 64)) | (1 << (dpm_xlParser.SHEET_COMPONENT - 64)) | (1 << (dpm_xlParser.PROPERTY_CODE - 64)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dpm_xlParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignmentExprContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dpm_xlParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def temporaryAssignmentExpression(self):
            return self.getTypedRuleContext(dpm_xlParser.TemporaryAssignmentExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentExpr" ):
                listener.enterAssignmentExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentExpr" ):
                listener.exitAssignmentExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentExpr" ):
                return visitor.visitAssignmentExpr(self)
            else:
                return visitor.visitChildren(self)


    class PersistentAssignExprContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dpm_xlParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def persistentAssignmentExpression(self):
            return self.getTypedRuleContext(dpm_xlParser.PersistentAssignmentExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPersistentAssignExpr" ):
                listener.enterPersistentAssignExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPersistentAssignExpr" ):
                listener.exitPersistentAssignExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPersistentAssignExpr" ):
                return visitor.visitPersistentAssignExpr(self)
            else:
                return visitor.visitChildren(self)


    class ExprWithoutAssignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a dpm_xlParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressionWithoutAssignment(self):
            return self.getTypedRuleContext(dpm_xlParser.ExpressionWithoutAssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprWithoutAssignment" ):
                listener.enterExprWithoutAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprWithoutAssignment" ):
                listener.exitExprWithoutAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprWithoutAssignment" ):
                return visitor.visitExprWithoutAssignment(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = dpm_xlParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = dpm_xlParser.ExprWithoutAssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.expressionWithoutAssignment()
                pass

            elif la_ == 2:
                localctx = dpm_xlParser.AssignmentExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.temporaryAssignmentExpression()
                pass

            elif la_ == 3:
                localctx = dpm_xlParser.PersistentAssignExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.persistentAssignmentExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PersistentExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def persistentAssignmentExpression(self):
            return self.getTypedRuleContext(dpm_xlParser.PersistentAssignmentExpressionContext,0)


        def expressionWithoutAssignment(self):
            return self.getTypedRuleContext(dpm_xlParser.ExpressionWithoutAssignmentContext,0)

